--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: ruby
 cache: bundler
 
 rvm:
-  - 2.0.0-p643
+  - 2.0.0-p598
   - 2.1.4
   - 2.2.1
   - rbx-2
   - jruby
+
+before_install: gem update bundler
 
 script: 'bundle exec rspec'
